# cloudera-cml-mcp-server

./: README.md  cml_ca.pem  example_config.json  p9ml2-apps-ip-10-17-78-208-support-fuse-cloudera-com-chain.pem  pyproject.toml  pyspark_pi.py  swagger.json
cml_mcp_server/: cml_mcp_server.py
